Adding the Angular TreeView
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23460

--- a/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
+++ b/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
@@ -8,6 +8,7 @@
     <meta name="author" content="">
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/bootstrap")
+    @Styles.Render("~/Content/AngularExtensions")
     @*@Styles.Render("~/Content/Semantic")*@
     @Styles.Render("~/Content/Styles")
 
