--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Reports/BillingReports.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Reports/BillingReports.html
@@ -1,18 +1,35 @@
 ﻿<vr-panel ng-controller="Analytics_BillingReportsController">
     <vr-form name="formFilter">
         <div ng-hide="filterSectionCollapsed" vr-loader="isInitializing">
-            <vr-row removeline>
+            <vr-row >
                 <vr-columns colnum="2">
                     <vr-select datatextfield="Name" datavaluefield="ReportDefinitionId"
                                datasource="reportsTypes" selectedvalues="reporttype"></vr-select>
                 </vr-columns>                
             </vr-row>
-            <vr-row removeline>
-                <vr-columns colnum="2">
-                    <vr-datetimepicker type="date" label="From:" value="params.fromDate" isrequired ng-if="reporttype.ParameterSettings.RequiresFromTime"></vr-datetimepicker>
+            <vr-row ng-if="reporttype">
+                <vr-columns colnum="2" ng-if="reporttype.ParameterSettings.RequiresCustomerId">
+                    <vr-label>Customer</vr-label>
+
+                    <vr-select limitheight="true" hideselectedvaluessection="true" datasource="optionsCustomers"
+                               selectedvalues="params.customer" datatextfield="Name" datavaluefield="CarrierAccountID"
+                               entityname="Customers"></vr-select>
                 </vr-columns>
-                <vr-columns colnum="2" >
-                    <vr-datetimepicker type="date" label="To:" value="params.toDate" isrequired ng-if="reporttype.ParameterSettings.RequiresToTime"></vr-datetimepicker>
+                <vr-columns colnum="2" ng-if="reporttype.ParameterSettings.RequiresSupllierId">
+                    <vr-label>Supplier</vr-label>
+                    <vr-select limitheight="true" hideselectedvaluessection="true" datasource="optionsSuppliers"
+                               selectedvalues="params.supplier" datatextfield="Name" datavaluefield="CarrierAccountID"
+                               entityname="Suppliers"></vr-select>
+                </vr-columns>
+                <vr-columns colnum="2" ng-if="reporttype.ParameterSettings.RequiresFromTime">
+                    <vr-datetimepicker type="date" label="From:" value="params.fromDate" isrequired></vr-datetimepicker>
+                </vr-columns>
+                <vr-columns colnum="2" ng-if="reporttype.ParameterSettings.RequiresToTime">
+                    <vr-datetimepicker type="date" label="To:" value="params.toDate" isrequired></vr-datetimepicker>
+                </vr-columns>
+                <vr-columns colnum="2" ng-if="reporttype.ParameterSettings.RequiresGroupByCustomer">
+                    <vr-label>Group By Customer</vr-label>
+                    <vr-switch value="params.groupByCustomer"></vr-switch>
                 </vr-columns>
             </vr-row>
         </div>
@@ -27,4 +44,11 @@
         </vr-actionbar>
     </vr-row>
 </vr-panel>
+<style>
+    vr-select[limitHeight="true"] .dropdown-menu {
+        height: 200px;
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+</style>
    
