--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
@@ -3,7 +3,7 @@
         <vr-form name="formStrategyEditor">
             <vr-row>
                 <vr-columns colnum="4">
-                    <vr-textbox value="name" label="Name" ng-required="true"></vr-textbox> 
+                    <vr-textbox value="name" label="Name" ng-required="true"></vr-textbox>
                 </vr-columns>
                 <vr-columns colnum="4">
                     <vr-textbox value="description" label="Description" ng-required="true"></vr-textbox>
@@ -11,23 +11,18 @@
                 <vr-columns colnum="4">
                     <vr-switch value="isDefault" label="Is Default"></vr-switch>
                 </vr-columns>
+            </vr-row>
 
 
+
+            <vr-row>
 
                 <vr-columns colnum="12">
-
-                 here the tabs
-
-
-
-
-
-
-
-
-
-
+                    <vr-select label="Filters:" datasource="filters"
+                               datatextfield="Description" datavaluefield="CriteriaId" selectedvalues="selectedFilter"></vr-select>
                 </vr-columns>
+
+              
             </vr-row>
         </vr-form>
     </vr-modalbody>
