--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
@@ -13,7 +13,14 @@
                 </vr-columns>
             </vr-row>
 
+            <vr-row>
 
+                <vr-columns colnum="12">
+                    Space
+                </vr-columns>
+
+
+            </vr-row>
 
             <vr-row>
 
@@ -24,6 +31,28 @@
 
               
             </vr-row>
+
+
+
+            <vr-row>
+
+                <vr-columns colnum="4">
+                    <vr-textbox value="threshold" label="Threshold" ng-required="true"></vr-textbox>
+                </vr-columns>
+
+                <vr-columns colnum="4">
+                    <vr-textbox value="minimumValue" label="Minimum Value" ></vr-textbox>
+                </vr-columns>
+
+                <vr-columns colnum="4">
+                    <vr-select label="Period:"  datasource="periods" datatextfield="Name" datavaluefield="Id" selectedvalues="selectedPeriod" ng-required="true"></vr-select>
+                </vr-columns>
+
+
+            </vr-row>
+
+
+
         </vr-form>
     </vr-modalbody>
     <div>
