--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
@@ -1,14 +1,14 @@
-﻿<div vr-modalcontent ng-controller="StrategyEditorController">
-    <vr-modalbody width="'50%'" vr-loader="isGettingData">
+﻿<div vr-modalcontent width="'75%'" ng-controller="StrategyEditorController">
+    <vr-modalbody vr-loader="isGettingData">
         <vr-form name="formStrategyEditor">
             <vr-row>
-                <vr-columns colnum="4">
-                    <vr-textbox value="name" label="Name" ng-required="true"></vr-textbox>
+                <vr-columns colnum="2">
+                    <vr-textbox value="name" label="Name" isrequired></vr-textbox>
                 </vr-columns>
-                <vr-columns colnum="4">
-                    <vr-textbox value="description" label="Description" ng-required="true"></vr-textbox>
+                <vr-columns colnum="8">
+                    <vr-textbox value="description" label="Description" isrequired></vr-textbox>
                 </vr-columns>
-                <vr-columns colnum="4">
+                <vr-columns colnum="2">
                     <vr-switch value="isDefault" label="Is Default"></vr-switch>
                 </vr-columns>
             </vr-row>
@@ -33,63 +33,36 @@
 
                 <vr-columns colnum="12">
 
+                    <vr-choices onselectionchanged="ctrl.viewVisibilityChanged">
+                        <vr-choice isselected="ctrl.isFilterTabShown">Filters</vr-choice>
+                        <vr-choice isselected="ctrl.isLevelsTabShow">Suspicion Levels</vr-choice>
+                    </vr-choices>
 
-                    <vr-row>
-
-                        <vr-columns colnum="12">
-                            <vr-select label="Filters:" datasource="filters"
-                                       datatextfield="Description" datavaluefield="CriteriaId" selectedvalues="selectedFilter"></vr-select>
-                        </vr-columns>
-
-
-                    </vr-row>
-
-
-
-                    <vr-row>
-
-                        <vr-columns colnum="4">
-                            <vr-textbox value="threshold" label="Threshold" ng-required="true"></vr-textbox>
-                        </vr-columns>
-
-                        <vr-columns colnum="4">
-                            <vr-textbox value="minimumValue" label="Minimum Value"></vr-textbox>
-                        </vr-columns>
-
-                        <vr-columns colnum="4">
-                            <vr-select label="Period:" datasource="periods" datatextfield="Name" datavaluefield="Id" selectedvalues="selectedPeriod" ng-required="true"></vr-select>
-                        </vr-columns>
+                    <div ng-show="ctrl.isFilterTabShown">
+                        <vr-datagrid datasource="strategyFilters" maxheight="400px">
+                            <vr-datagridcolumn headertext="'Related'" widthfactor="3">       <vr-switch value="dataItem.IsRelated"></vr-switch>            </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Filter #'" field="'Filter'" widthfactor="3">                   </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Filter Description'" field="'Description'" widthfactor="20">                   </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Threshold'">  <vr-textbox value="dataItem.Threshold" ></vr-textbox>            </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Minimum Value'">  <vr-textbox value="dataItem.MinimumValue" ></vr-textbox>            </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Period'" >  <vr-select datasource="viewScope.periods" datatextfield="Name" datavaluefield="Id" selectedvalues="selectedPeriod"></vr-select>       </vr-datagridcolumn>
+                        </vr-datagrid>
+                    </div>
 
 
-                    </vr-row>
+                    <div ng-show="ctrl.isLevelsTabShow">
+                        Grid 2
+                        
 
-                    <vr-row>
-
-                        <vr-columns colnum="12">
-                            <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
-                                <div transclude-to="buttons">
-                                    <vr-button type="Save" formname="formStrategyEditor" data-onclick="SaveStrategyFilters" ></vr-button>
-                                    <vr-button type="Reset" data-onclick="reset"></vr-button>
-                                </div>
-                            </vr-actionbar>
-                        </vr-columns>
+                    </div>
 
 
-                    </vr-row>
-
-                    <vr-row>
-
-                        <vr-columns colnum="12">
-                            <vr-datagrid datasource="strategyFilters" menuactions="gridMenuActions" maxheight="400px"  on-ready="onMainGridReady">
-                                <vr-datagridcolumn headertext="'Field'" field="'Field'"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'Threshold'" field="'Threshold'"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'Minimum Value'" field="'MinimumValue'"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'Period'" field="'Period'"></vr-datagridcolumn>
-                            </vr-datagrid>
-                        </vr-columns>
 
 
-                    </vr-row>
+                </vr-columns>
+
+
+            </vr-row>
 
 
 
@@ -103,15 +76,15 @@
 
 
 
-                    </vr-columns>
-                </vr-row>
+            </vr-columns>
+            </vr-row>
 
 
 
 
 
 
-                  
+
 
 
 
