--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
@@ -40,13 +40,14 @@
 
                     <div ng-show="ctrl.isFilterTabShown">
                         <vr-datagrid datasource="strategyFilters" maxheight="400px">
-                            <vr-datagridcolumn headertext="'Related'" widthfactor="3">       <vr-switch value="dataItem.IsRelated"></vr-switch>            </vr-datagridcolumn>
-                            <vr-datagridcolumn headertext="'Filter #'" field="'Filter'" widthfactor="3">                   </vr-datagridcolumn>
-                            <vr-datagridcolumn headertext="'Filter Description'" field="'Description'" widthfactor="20">                   </vr-datagridcolumn>
-                            <vr-datagridcolumn headertext="'Threshold'">  <vr-textbox value="dataItem.Threshold" ></vr-textbox>            </vr-datagridcolumn>
-                            <vr-datagridcolumn headertext="'Minimum Value'">  <vr-textbox value="dataItem.MinimumValue" ></vr-textbox>            </vr-datagridcolumn>
-                            <vr-datagridcolumn headertext="'Period'" >  <vr-select datasource="viewScope.periods" datatextfield="Name" datavaluefield="Id" selectedvalues="selectedPeriod"></vr-select>       </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="' '" widthfactor="3">       <vr-switch value="dataItem.isSelected"></vr-switch>            </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Filter #'" field="'filterId'" widthfactor="3">                   </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Filter Description'" field="'filterDescription'" widthfactor="20">                   </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Threshold'">  <vr-textbox value="dataItem.threshold" ></vr-textbox>            </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Minimum Value'">  <vr-textbox value="dataItem.minimumValue" ></vr-textbox>            </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Period'" >  <vr-select datasource="viewScope.periods" datatextfield="Name" datavaluefield="Id" selectedvalues="dataItem.period"></vr-select>       </vr-datagridcolumn>
                         </vr-datagrid>
+                        {{strategyFilters}}
                     </div>
 
 
