Modifying query to get the needed columns and changing in enum.
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23506

--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/CDR/CDRLog.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/CDR/CDRLog.html
@@ -16,15 +16,9 @@
                         <vr-select  ismultipleselection datasource="searchZones" label="Zones: "selectedvalues="optionsZonesFilter.selectedvalues" datatextfield="Name" datavaluefield="ZoneId"
                                    entityname="Zones"></vr-select>
                     </vr-columns>
-                    <!--<vr-columns colnum="2">
-                        <vr-select datasource="OriginatingZone" selectedvalues="selectedOriginatingZone" label="Originating Zone"></vr-select>
-                    </vr-columns>-->
-
-                    <!--<vr-columns colnum="2">
-                        <vr-select datasource="OrderBy" selectedvalues="selectedOrderBy" label="Order By"></vr-select>
-                    </vr-columns>-->
+                  
                     <vr-columns colnum="2">
-                        <vr-select datasource="CDROption" selectedvalues="selectedCDROption" label="CDR Option"></vr-select>
+                        <vr-select datasource="CDROption" datatextfield="description" datavaluefield="value" selectedvalues="selectedCDROption" label="CDR Option" isrequired></vr-select>
                     </vr-columns>
                     <vr-columns colnum="2">
                         <vr-textbox value="nRecords" label="Limit Results to"></vr-textbox>
@@ -36,28 +30,7 @@
                         <vr-datetimepicker type="date" label="To:" value="toDate" isrequired></vr-datetimepicker>
                     </vr-columns>
                     
-                    <!--  <vr-columns colnum="2">
-                        <vr-textbox value="All" onvaluechanged="" label="Phone Number"></vr-textbox>
-                    </vr-columns>
-                  <vr-columns colnum="2">
-                        <vr-textbox value="" onvaluechanged="" label="CLI"></vr-textbox>
-                    </vr-columns>-->
                    
-                   <!-- <vr-columns colnum="2">
-                        <vr-textbox value="" customvalidate="" onvaluechanged="" label="Release Code"></vr-textbox>
-                    </vr-columns>
-                    <vr-columns colnum="2">
-                        <vr-select datasource="durationIn" selectedvalues="selectedDurationIn" label="Duration in"></vr-select>
-                    </vr-columns>
-                    <vr-columns colnum="2">
-                        <vr-textbox value="" customvalidate="" onvaluechanged="" label="Min Duration"></vr-textbox>
-                    </vr-columns>
-                    <vr-columns colnum="2">
-                        <vr-textbox value="" customvalidate="" onvaluechanged="" label="Max Duration"></vr-textbox>
-                    </vr-columns>
-                    <vr-columns colnum="2">
-                        <vr-switch value="false" onvaluechanged="" label="Show ExtraFields"></vr-switch>
-                    </vr-columns>-->
                 </vr-row> 
             </div>
         </vr-form>
@@ -74,16 +47,16 @@
         <!--<input type="text" ng-model="name" />-->
 
 
-        <div>
-            <vr-row>
-                <vr-columns colnum="12" simplecol>
-                    <vr-datagrid datasource="data" pagersettings="mainGridPagerSettings" data-on-ready="onMainGridReady" menuactions="gridMenuActions">
-                        <vr-datagridcolumn ng-repeat="measure in measures" headertext="measure.description" field="measure.propertyName" type="'Number'" tag="measure" onsortchanged="onMainGridSortChanged"></vr-datagridcolumn>
-                       
-                        
-                    </vr-datagrid>
-                </vr-columns>
-            </vr-row>
-        </div>
+         <div ng-show="showResult" vr-loader="isGettingData">
+             <vr-row>
+                 <vr-columns colnum="12" simplecol>
+                     <vr-datagrid datasource="data" pagersettings="mainGridPagerSettings" data-on-ready="onMainGridReady" >
+                         <vr-datagridcolumn ng-repeat="measure in measures" headertext="measure.description" field="measure.propertyName"  tag="measure" onsortchanged="onMainGridSortChanged"></vr-datagridcolumn>
+
+
+                     </vr-datagrid>
+                 </vr-columns>
+             </vr-row>
+         </div>
 
       
