git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23513

--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
@@ -42,12 +42,12 @@
                         <vr-datagrid datasource="strategyFilters" maxheight="400px">
                             <vr-datagridcolumn headertext="' '" widthfactor="3">       <vr-switch value="dataItem.isSelected"></vr-switch>            </vr-datagridcolumn>
                             <vr-datagridcolumn headertext="'Filter #'" field="'filterId'" widthfactor="3">                   </vr-datagridcolumn>
-                            <vr-datagridcolumn headertext="'Filter Description'" field="'filterDescription'" widthfactor="20">                   </vr-datagridcolumn>
-                            <vr-datagridcolumn headertext="'Threshold'">  <vr-textbox value="dataItem.threshold" ></vr-textbox>            </vr-datagridcolumn>
-                            <vr-datagridcolumn headertext="'Minimum Value'">  <vr-textbox value="dataItem.minimumValue" ></vr-textbox>            </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Description'" field="'description'" widthfactor="20">                   </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Threshold'">  <vr-textbox value="dataItem.threshold"></vr-textbox>            </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Minimum Value'">  <vr-textbox value="dataItem.minimumValue"></vr-textbox>            </vr-datagridcolumn>
                             <vr-datagridcolumn headertext="'Period'" >  <vr-select datasource="viewScope.periods" datatextfield="Name" datavaluefield="Id" selectedvalues="dataItem.period"></vr-select>       </vr-datagridcolumn>
                         </vr-datagrid>
-                        {{strategyFilters}}
+                        {{filterDefinitions}}
                     </div>
 
 
