git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23520

--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
@@ -47,7 +47,7 @@
                             <vr-datagridcolumn headertext="'Minimum Value'">  <vr-textbox value="dataItem.minimumValue"></vr-textbox>            </vr-datagridcolumn>
                             <vr-datagridcolumn headertext="'Period'" >  <vr-select datasource="viewScope.periods" datatextfield="Name" datavaluefield="Id" selectedvalues="dataItem.period"></vr-select>       </vr-datagridcolumn>
                         </vr-datagrid>
-                        {{strategyFilters}}
+                        {{periods}}
                     </div>
 
 
