--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Reports/BillingReports.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Reports/BillingReports.html
@@ -8,34 +8,56 @@
                 </vr-columns>                
             </vr-row>
             <vr-row ng-if="reporttype">
-                <vr-columns colnum="2" ng-if="reporttype.ParameterSettings.RequiresCustomerId">
+                <vr-columns colnum="3" ng-if="reporttype.ParameterSettings.RequiresCustomerId">
                     <vr-label>Customer</vr-label>
 
                     <vr-select limitheight="true" hideselectedvaluessection="true" datasource="optionsCustomers"
                                selectedvalues="params.customer" datatextfield="Name" datavaluefield="CarrierAccountID"
                                entityname="Customers"></vr-select>
                 </vr-columns>
-                <vr-columns colnum="2" ng-if="reporttype.ParameterSettings.RequiresSupllierId">
+                <vr-columns colnum="3" ng-if="reporttype.ParameterSettings.RequiresSupllierId">
                     <vr-label>Supplier</vr-label>
                     <vr-select limitheight="true" hideselectedvaluessection="true" datasource="optionsSuppliers"
                                selectedvalues="params.supplier" datatextfield="Name" datavaluefield="CarrierAccountID"
                                entityname="Suppliers"></vr-select>
                 </vr-columns>
-                <vr-columns colnum="2" ng-if="reporttype.ParameterSettings.RequiresFromTime">
+                <vr-columns colnum="3" ng-if="reporttype.ParameterSettings.RequiresFromTime">
                     <vr-datetimepicker type="date" label="From:" value="params.fromDate" isrequired></vr-datetimepicker>
                 </vr-columns>
-                <vr-columns colnum="2" ng-if="reporttype.ParameterSettings.RequiresToTime">
+                <vr-columns colnum="3" ng-if="reporttype.ParameterSettings.RequiresToTime">
                     <vr-datetimepicker type="date" label="To:" value="params.toDate" isrequired></vr-datetimepicker>
                 </vr-columns>
-                <vr-columns colnum="2" ng-if="reporttype.ParameterSettings.RequiresGroupByCustomer">
+                
+            </vr-row>
+            <vr-row ng-if="reporttype">
+                <vr-columns colnum="3" ng-if="reporttype.ParameterSettings.RequiresGroupByCustomer">
                     <vr-label>Group By Customer</vr-label>
                     <vr-switch value="params.groupByCustomer"></vr-switch>
                 </vr-columns>
+                <vr-columns colnum="3" ng-if="reporttype.ParameterSettings.RequiresIsCost">
+                    <vr-label>Is Cost</vr-label>
+                    <vr-switch value="params.isCost"></vr-switch>
+                </vr-columns>
+
+                <vr-columns colnum="3" ng-if="reporttype.ParameterSettings.RequiresIsService">
+                    <vr-label>Services</vr-label>
+                    <vr-switch value="params.service"></vr-switch>
+                </vr-columns>
+
+                <vr-columns colnum="3" ng-if="reporttype.ParameterSettings.RequiresIsCommission">
+                    <vr-label>Commission/Extra</vr-label>
+                    <vr-switch value="params.commission"></vr-switch>
+                </vr-columns>
+                <vr-columns colnum="3" ng-if="reporttype.ParameterSettings.RequiresGroupBySupplier">
+                    <vr-label>By Supplier</vr-label>
+                    <vr-switch value="params.bySupplier"></vr-switch>
+                </vr-columns>
+
             </vr-row>
         </div>
     </vr-form>
 
-    <vr-row>
+    <vr-row removeline>
         <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
 
             <div transclude-to="buttons">
