--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/CDR/CDRLog.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/CDR/CDRLog.html
@@ -13,7 +13,7 @@
                                    datatextfield="Name" datavaluefield="CarrierAccountID" selectedvalues="selectedSuppliers" ismultipleselection></vr-select>
                     </vr-columns>
                     <vr-columns colnum="2">
-                        <vr-select  ismultipleselection datasource="searchZones" label="Zones: "selectedvalues="optionsZonesFilter.selectedvalues" datatextfield="Name" datavaluefield="ZoneId"
+                        <vr-select  ismultipleselection datasource="searchZones" label="Zones: "selectedvalues="selectedZones" datatextfield="Name" datavaluefield="ZoneId"
                                    entityname="Zones"></vr-select>
                     </vr-columns>
                   
@@ -39,7 +39,7 @@
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
 
                 <div transclude-to="buttons">
-                    <vr-button type="Search" formname="formFilter" data-onclick="GetCDRData"></vr-button>
+                    <vr-button type="Search" formname="formFilter" data-onclick="getData"></vr-button>
                     <vr-button type="Reset"></vr-button>
                 </div>
             </vr-actionbar>
