fixed vr-choices bug
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23562

--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Traffic Statistics/TrafficStatisticsGrid.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Traffic Statistics/TrafficStatisticsGrid.html
@@ -1,5 +1,5 @@
 ﻿<div ng-controller="TrafficStatisticsGridController" vr-loader="isGettingData">
-    <vr-choices selectedindex="selectedGroupKeyIndex" onselectionchanged="groupKeySelectionChanged">
+    <vr-choices selectedindex="selectedGroupKeyIndex" onselectionchanged="groupKeySelectionChanged()">
         <vr-choice ng-repeat="groupKey in groupKeys">{{groupKey.title}}</vr-choice>
     </vr-choices>
     <div ng-repeat="groupKey in groupKeys">
