--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
@@ -17,22 +17,6 @@
 
                 <vr-columns colnum="12">
 
-                </vr-columns>
-
-
-            </vr-row>
-
-
-
-
-
-
-
-
-            <vr-row>
-
-                <vr-columns colnum="12">
-
                     <vr-choices onselectionchanged="ctrl.viewVisibilityChanged">
                         <vr-choice isselected="ctrl.isFilterTabShown">Filters</vr-choice>
                         <vr-choice isselected="ctrl.isLevelsTabShow">Suspicion Levels</vr-choice>
@@ -45,35 +29,53 @@
                             <vr-datagridcolumn headertext="'Description'" field="'description'" widthfactor="20">                   </vr-datagridcolumn>
                             <vr-datagridcolumn headertext="'Threshold'">  <vr-textbox value="dataItem.threshold"></vr-textbox>            </vr-datagridcolumn>
                             <vr-datagridcolumn headertext="'Minimum Value'">  <vr-textbox value="dataItem.minimumValue"></vr-textbox>            </vr-datagridcolumn>
-                            <vr-datagridcolumn headertext="'Period'" >  <vr-select datasource="viewScope.periods" datatextfield="Name" datavaluefield="Id" selectedvalues="dataItem.period"></vr-select>       </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Period'">  <vr-select datasource="viewScope.periods" datatextfield="Name" datavaluefield="Id" selectedvalues="dataItem.period"></vr-select>       </vr-datagridcolumn>
                         </vr-datagrid>
                     </div>
 
-
                     <div ng-show="ctrl.isLevelsTabShow">
-                       
+                        <vr-row>
 
-                        <vr-datagrid datasource="strategyLevels" maxheight="300px">
-                            <vr-datagridcolumn headertext="'Suspection Level'" field="'suspectionLevel'" widthfactor="20"></vr-datagridcolumn>
-                            <vr-datagridcolumn ng-repeat="x in filterDefinitions" headertext="'Filter: ' + x.filterId" >  
-                                <div>
-                                          
-                                    <vr-switch value="dataItem.StrategyLevelCriterias[$index - 1].isSelected"></vr-switch>
-                                    <!--<vr-textbox ng-show="dataItem.StrategyLevelCriterias[$index - 1].isSelected && edit" value="dataItem.StrategyLevelCriterias[$index - 1].percentage"></vr-textbox>-->
-                                    <vr-select ng-show="dataItem.StrategyLevelCriterias[$index - 1].isSelected && edit" ng-mouseleave="edit=false" datasource="viewScope.percentages" datatextfield="description" datavaluefield="value" selectedvalues="dataItem.StrategyLevelCriterias[$index - 1].percentage"></vr-select>
-                                   
-                                    <vr-label ng-click="edit = true" ng-hide="edit || !dataItem.StrategyLevelCriterias[$index - 1].isSelected">{{dataItem.StrategyLevelCriterias[$index - 1].percentage.description}}</vr-label>
+                            <vr-columns colnum="2">
+                                <vr-select datasource="suspectionLevels" datatextfield="name" datavaluefield="id" label="Suspection Level" colnum="2" selectedvalues="selectedSuspectionLevel"></vr-select>
+                            </vr-columns>
+                            <vr-columns colnum="1">
+                                <div style="background-color:darkgray" >
+                                    <vr-button type="Add"  data-onclick="AddSuspectionLevel"></vr-button>
                                 </div>
+                                
+
+                            </vr-columns>
+
+                        </vr-row>
+
+                        <div>
+                          
                             
-                                             </vr-datagridcolumn>
-                        </vr-datagrid>
+                        </div>
+
+                        <div>
+
+                            <vr-datagrid datasource="strategyLevels" maxheight="300px">
+                                <vr-datagridcolumn headertext="'Suspection Level'" field="'suspectionLevel.name'" widthfactor="20"></vr-datagridcolumn>
+                                <vr-datagridcolumn ng-repeat="x in filterDefinitions" headertext="'Filter: ' + x.filterId">
+                                    <div>
+
+                                        <vr-switch value="dataItem.StrategyLevelCriterias[$index - 1].isSelected"></vr-switch>
+
+                                        <vr-select ng-show="dataItem.StrategyLevelCriterias[$index - 1].isSelected && edit" ng-mouseleave="edit=false" datasource="viewScope.percentages" datatextfield="description" datavaluefield="value" selectedvalues="dataItem.StrategyLevelCriterias[$index - 1].percentage"></vr-select>
+
+                                        <vr-label ng-click="edit = true" ng-hide="edit || !dataItem.StrategyLevelCriterias[$index - 1].isSelected">{{dataItem.StrategyLevelCriterias[$index - 1].percentage.description}}</vr-label>
+                                    </div>
+
+                                </vr-datagridcolumn>
+                            </vr-datagrid>
+                        </div>
 
 
 
 
 
-
-                        
 
                     </div>
 
@@ -103,7 +105,7 @@
 
 
 
-
+            {{strategyObject}}
 
 
 
